force-app/main/default/objects/Billboard__c/fields/Attachment_ID2__c.field-meta.xml
<CustomField>
    <fullName>Attachment_ID2__c</fullName>
    <label>Attachment ID2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>