force-app/main/default/objects/Billboard__c/fields/Cat_Scales__c.field-meta.xml
<CustomField>
    <fullName>Cat_Scales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cat Scales</label>
    <type>Checkbox</type>
</CustomField>