force-app/main/default/objects/Billboard__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Billboards</relationshipLabel>
    <relationshipName>Billboards</relationshipName>
    <type>Lookup</type>
</CustomField>