force-app/main/default/objects/Billboard__c/fields/Dog_Park__c.field-meta.xml
<CustomField>
    <fullName>Dog_Park__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dog Park</label>
    <type>Checkbox</type>
</CustomField>