force-app/main/default/objects/Billboard__c/fields/Illumination__c.field-meta.xml
<CustomField>
    <fullName>Illumination__c</fullName>
    <label>Illumination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>