force-app/main/default/objects/Billboard__c/fields/Illumination_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Illumination_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Illumination checkbox</label>
    <type>Checkbox</type>
</CustomField>