force-app/main/default/objects/Billboard__c/fields/Photo_2__c.field-meta.xml
<CustomField>
    <fullName>Photo_2__c</fullName>
    <label>Photo Old 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>