force-app/main/default/objects/Billboard__c/fields/RV__c.field-meta.xml
<CustomField>
    <fullName>RV__c</fullName>
    <label>RV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>RV Hook Up</fullName>
            </value>
            <value>
                <fullName>RV Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>