force-app/main/default/objects/Billboard__c/fields/Store_Features__c.field-meta.xml
<CustomField>
    <fullName>Store_Features__c</fullName>
    <label>Store Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Illumination</fullName>
            </value>
            <value>
                <fullName>Cat Scales</fullName>
            </value>
            <value>
                <fullName>Dog Park</fullName>
            </value>
            <value>
                <fullName>Price Pack</fullName>
            </value>
            <value>
                <fullName>Factoring</fullName>
            </value>
            <value>
                <fullName>Land Lease</fullName>
            </value>
            <value>
                <fullName>Cost Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>